Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 1.3.81 (2.0.0-alpha), Qt Creator 1.3.83 (2.0.0-beta), Qt Creator 1.3.85 (2.0.0-rc1), Qt Creator 2.0.0, Qt Creator 2.0.1, Qt Creator 2.1.0, Qt Creator 2.2.0
-
None
-
24626a68355a4797d07e22ef8fa3eec23b022406
Description
The search results display neither uses my selected tab width, nor allows horizontal scrolling of long text lines.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-21099 No horizontal scroll bar for Search Results pane
-
- Closed
-
- replaces
-
QTCREATORBUG-6036 Search results don't conform to tab size
-
- Closed
-