Use tab width in search results.

Task-number: QTCREATORBUG-2042
Change-Id: Ie1769cb44f60da8ef6b26d5d27f9c7a600534f6b
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>